force-app/main/default/objects/Student__c/fields/Mentor_ID__c.field-meta.xml
<CustomField>
    <fullName>Mentor_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mentor_ID</label>
    <referenceTo>Mentor__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>